--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">My Apps</string>
     <string name="menu_main_titleAdd">Add App</string>
+    <string name="hit_appName">Name app</string>
+    <string name="hit_appNameDev">Name developer</string>
+    <string name="hit_appDetails">Details app</string>
+    <string name="hit_appUpdate">Update</string>
+    <string name="title_actAdd">Add app</string>
 </resources>
