--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,10 @@
     <string name="msgEmptyViews">Item can\\\'t be empty</string>
     <string name="msgOk_AddAapp">Starting installation</string>
     <string name="msgFail_AddAapp">Installation error</string>
-    <string name="msgOk_ExistsApp">The application is installed</string>
-    <string name="title_lastInstalledApp">Last Application Installed:</string>
+    <string name="msgOk_ExistsApp">The app is installed</string>
+    <string name="title_lastInstalledApp">Last app Installed:</string>
     <string name="msgEmptyApps">No app installed</string>
     <string name="msgStatusInstall">Installed</string>
     <string name="msgStatusUpdate">Updated</string>
+    <string name="menu_app_titleEdit">Edit app</string>
 </resources>
