--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,4 +18,5 @@
     <string name="msgStatusInstall">Instada</string>
     <string name="msgStatusUpdate">Actualizada</string>
     <string name="menu_app_titleEdit">Editar Applicatión</string>
+    <string name="fragm_btnEdit">Editar</string>
 </resources>
