--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="hit_appNameDev">Name developer</string>
     <string name="hit_appDetails">Details app</string>
     <string name="hit_appUpdate">Update</string>
+    <string name="hit_UnInstall">Uninstalled</string>
     <string name="title_actAdd">Add app</string>
     <string name="txtDeveloper">Developer</string>
     <string name="txt_btnAddApp">Install</string>
@@ -20,4 +21,5 @@
     <string name="menu_app_titleEdit">Edit app</string>
     <string name="fragm_btnEdit">Edit app</string>
     <string name="txt_btnOpen">Open</string>
+    <string name="title_serviceUdate">Updating</string>
 </resources>
