--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="title_serviceUninstall">Uninstalling</string>
     <string name="desc_serviceUninstall">Deleting files</string>
     <string name="title_serviceUninstall_ok">Uninstall completed</string>
+    <string name="txt_dialogUnistall">Do you want to uninstall the application?</string>
 </resources>
