--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="desc_serviceUninstall">Deleting files</string>
     <string name="title_serviceUninstall_ok">Uninstall completed</string>
     <string name="txt_dialogUnistall">Do you want to uninstall the application?</string>
+    <string name="txt_btnEditApp">Save changes</string>
 </resources>
